# bfu-labs-bot

./: .gitignore  Dockerfile  README.md  app.py  database_table_configuration.py  docker-compose.yaml  loader.py  pyproject.toml  requirements.txt
_legacy/: database_connector.py  deleter.py  filler.py  laboratory_work.py  updater.py
data/: .env.example  config.py
database/: __init__.py  creator.py  database_connector.py  filler.py  inserter.py  selector.py  updater.py
handlers/: __init__.py  admin.py  error.py  user.py
handlers/admin/: __init__.py  admin_utils.py  invite_teacher.py  is_admin_wrapper.py  mimicry.py
handlers/student/: __init__.py  connect_to_group.py  group_menu.py  post_lab.py  show_my_groups.py  start.py
handlers/teacher/: __init__.py  add_group.py  add_new_lab.py  cancel_operation.py  check_students_labs.py  group_menu.py  register.py  show_my_groups.py  start.py
keyboards/: inline.py
managers/: __init__.py  cloud.py  db.py  group.py  lab.py  user.py  ya_disk.py
middlewares/: Throttling.py  __init__.py
repositories/: __init__.py
repositories/database/: __init__.py  create.py  insert.py  select.py  update.py
repositories/db/: __init__.py  postgre_rep.py
repositories/disk/: __init__.py  yadisk_rep.py
utils/: LabInfo.py  __init__.py  callbacks.py  carousel.py  enums.py  formatter.py  mailer.py  samples_gerenator.py  stat_generator.py  states.py  utils.py
utils/models/: __init__.py  group_info.py  laboratory_work.py  models.py  student.py  students_labs.py  teacher.py
utils/parsers/: __init__.py  csv_parser.py  txt_parser.py
