[tool.poetry]
name = "bfu-labs-bot"
version = "0.1.0"
description = ""
authors = ["PheeZz <jagubkoff@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bfu_labs_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "2.25.1"
aiohttp = "3.8.4"
aiosignal = "1.3.1"
async-timeout = "4.0.2"
attrs = "23.1.0"
autopep8 = "2.0.2"
babel = "2.9.1"
certifi = "2022.12.7"
charset-normalizer = "3.1.0"
colorama = "0.4.6"
frozenlist = "1.3.3"
idna = "3.4"
loguru = "0.7.0"
magic-filter = "1.0.9"
multidict = "6.0.4"
pycodestyle = "2.10.0"
python-dotenv = "1.0.0"
pytz = "2023.3"
win32-setctime = "1.1.0"
yarl = "1.9.1"
yadisk = "1.3.3"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
